--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "pombo",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Pombo module.",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/VitorLuizC/node-pombo/issues"
   },
-  "homepage": "https://github.com/VitorLuizC/node-pombo#readme"
+  "homepage": "https://github.com/VitorLuizC/node-pombo#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  }
 }
